--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -151,12 +151,14 @@
                "UNABLE_TO_LAUNCH": "No se puede lanzar",
                "STEAM_NOT_RUNNING": "Steam no funciona",
                "BS_ALREADY_RUNNING": "BeatSaber ya está en marcha",
-               "EXE_NOT_FINDED": "Archivos perdidos"
+               "EXE_NOT_FINDED": "Archivos perdidos",
+               "EXIT": "Parada abrupta"
             },
             "msg":{
                "STEAM_NOT_RUNNING": "Para iniciar BeatSaber es necesario que Steam esté en funcionamiento.",
                "BS_ALREADY_RUNNING": "Cierra BeatSaber antes de volver a lanzarlo.",
-               "EXE_NOT_FINDED": "Parece que faltan algunos archivos, intente verificar los archivos."
+               "EXE_NOT_FINDED": "Parece que faltan algunos archivos, intente verificar los archivos.",
+               "EXIT": "BeatSaber se detuvo abruptamente, trata de revisar los archivos."
             }
          }
       },
