--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -63,7 +63,15 @@
               		"es-ES": "Español"
             	}
         		}
-      	}
+      	},
+        "patreon":{
+            "title":"Apoyo BSManager 💖",
+            "description": "Apoye el proyecto y ayúdenos a proporcionar mejoras continuas a BSManager.",
+            "buttons":{
+                "support": "Apoyo BSManager",
+                "supporters":"Apoyos 👀"
+            }
+        }
     	}
   	},
 
